setup the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   db:
     image: postgres
     restart: always
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: bookstore
       POSTGRES_PASSWORD: root
