--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DB_HOST=
 DB_PORT=
-DB_USER=
-DB_PASWORD=
-DB_NAME=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 JWT_SECRET=
 JWT_REFRESH_SECRET=
 JWT_EXPIRATION=
