--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,44 @@
 version: "3.9"
 services:
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
     ports:
       - "3000:3000"
+    volumes:
+      - type: bind
+        source: .
+        target: /app
   db:
     image: postgres
     restart: always
+    ports:
+      - '5432:5432'
     env_file:
-      - .env
+      - ./.env
     volumes:
-       - db:/var/lib/postgresql/data
+      - db:/var/lib/postgresql/data
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+  #   container_name: elasticsearch
+  #   ports:
+  #     - 9200:9200
+  #     - 9300:9300
+  #   environment:
+  #     - discovery.type=single-node
+  #   volumes:
+  #     - esdata:/usr/share/elasticsearch/data
+  admin:
+    image: adminer
+    restart: always
+    depends_on: 
+      - db
+    ports:
+      - 8080:8080
 
+volumes:
+  db:
+  # esdata:
