--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,51 @@
-DB_HOST=
-DB_PORT=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+#Database Configuration
+DB_HOST=db
+DB_PORT=5432
+POSTGRES_USER=bookstore
+POSTGRES_PASSWORD=root
+POSTGRES_DB=bookstore
+
+#JWT Configuration
 JWT_SECRET=
 JWT_REFRESH_SECRET=
 JWT_EXPIRATION=
+JWT_REFRESH_EXPIRATION=
+RESET_PASSWORD_EXPARATION=
+JWT_EMAIL_VERIFICATION_SECRET=
+
+#Api Configuration
+PORT=3000
+HOST=localhost:3000
+
+#Grafana Configuration
+GF_SECURITY_ADMIN_USER=
+GF_SECURITY_ADMIN_PASSWORD=
+GF_SERVER_DOMAIN=localhost
+GF_SERVER_ROOT_URL=https://localhost/grafana
+GF_SERVER_SERVE_FROM_SUB_PATH=true
+
+#MeiliSearch Configuration
+MEILI_HOST=http://meilisearch:7700
+MEILI_MASTER_KEY=
+
+#Google OAuth Configuration
+
+GOOGLE_AUTHORIZATION_URL=https://accounts.google.com/o/oauth2/auth
+GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK=
+
+#Facebook OAuth Configuration
+FACEBOOK_AUTHORIZATION_URL=https://www.facebook.com/dialog/oauth
+FACEBOOK_TOKEN_URL=https://graph.facebook.com/oauth/access_token
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CALLBACK=https://localhost/auth/redirect/facebook
+
+#SMTP Configuration
+SMTP_HOST=us2.smtp.mailhostbox.com
+SMTP_USER=
+SMTP_PASSSWORD=
+SMTP_DEFAULT_EMAIL=
+SMTP_TEMPLATE_DIR=templates
