update .env.sample: remove facebook_callback_url

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ FACEBOOK_AUTHORIZATION_URL=https://www.facebook.com/dialog/oauth
 FACEBOOK_TOKEN_URL=https://graph.facebook.com/oauth/access_token
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
-FACEBOOK_CALLBACK=https://localhost/auth/redirect/facebook
+FACEBOOK_CALLBACK=
 
 #SMTP Configuration
 SMTP_HOST=us2.smtp.mailhostbox.com
