working on permission

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migration:revert": "npm run typeorm:cli migration:revert"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.9.1",
+    "@casl/ability": "^6.5.0",
+    "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
@@ -41,8 +42,10 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
     "meilisearch": "^0.33.0",
     "multer": "^1.4.5-lts.1",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
@@ -54,6 +57,7 @@
     "rxjs": "^7.2.0",
     "sharp": "^0.32.1",
     "slugify-arabic": "^1.6.0",
+    "speakeasy": "^2.0.0",
     "typeorm": "^0.3.16",
     "uuidv4": "^6.2.13"
   },
@@ -66,13 +70,16 @@
     "@types/express": "^4.17.13",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "27.0.0",
+    "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.7",
+    "@types/mustache": "^4.2.5",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.9",
     "@types/passport-facebook": "^3.0.0",
     "@types/passport-google-oauth": "^1.0.42",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
